--- a/config/locales/articles.ja.yml
+++ b/config/locales/articles.ja.yml
@@ -1,5 +1,10 @@
 ja:
   activerecord:
+    attributes:
+        article:
+          statuses:
+            public: "公開"
+            private: "非公開"
     errors:
       models:
         article:
