--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -30,3 +30,8 @@ ja:
        previous: <i class="fas fa-angle-left"></i>
        next: <i class="fas fa-angle-right"></i>
        truncate: "..."    
+  #ﾃﾞﾌｫﾙﾄ書式を%Y/%m/%d %H:%M:%Sにするための設定
+  time:
+    formats:
+      default: "%Y/%m/%d %H:%M:%S"     
+      short: "%m/%d %H:%M"
